--- a/DOME.vcxproj.filters
+++ b/DOME.vcxproj.filters
@@ -119,6 +119,9 @@
     <ClCompile Include="classes\menu_scene.cpp">
       <Filter>Source Files\classes</Filter>
     </ClCompile>
+    <ClCompile Include="classes\camera.cpp">
+      <Filter>Source Files\classes</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="utils\Collisions.h">
@@ -281,6 +284,9 @@
       <Filter>Header Files\classes</Filter>
     </ClInclude>
     <ClInclude Include="classes\menu_button.h">
+      <Filter>Header Files\classes</Filter>
+    </ClInclude>
+    <ClInclude Include="classes\camera.h">
       <Filter>Header Files\classes</Filter>
     </ClInclude>
   </ItemGroup>
