Basic ranged enemy behaviour

--- a/DOME.vcxproj.filters
+++ b/DOME.vcxproj.filters
@@ -122,6 +122,9 @@
     <ClCompile Include="classes\camera.cpp">
       <Filter>Source Files\classes</Filter>
     </ClCompile>
+    <ClCompile Include="classes\ranged_enemy.cpp">
+      <Filter>Source Files\classes</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="utils\Collisions.h">
@@ -287,6 +290,9 @@
       <Filter>Header Files\classes</Filter>
     </ClInclude>
     <ClInclude Include="classes\camera.h">
+      <Filter>Header Files\classes</Filter>
+    </ClInclude>
+    <ClInclude Include="classes\ranged_enemy.h">
       <Filter>Header Files\classes</Filter>
     </ClInclude>
   </ItemGroup>
