--- a/DOME.vcxproj
+++ b/DOME.vcxproj
@@ -33,6 +33,7 @@
     <ClInclude Include="classes\physiognomy.h" />
     <ClInclude Include="classes\player.h" />
     <ClInclude Include="classes\raid_scene.h" />
+    <ClInclude Include="classes\ranged_enemy.h" />
     <ClInclude Include="classes\shelter_scene.h" />
     <ClInclude Include="components\enemy_behaviour_component.h" />
     <ClInclude Include="components\enemy_component.h" />
@@ -90,6 +91,7 @@
     <ClCompile Include="classes\physiognomy.cpp" />
     <ClCompile Include="classes\player.cpp" />
     <ClCompile Include="classes\raid_scene.cpp" />
+    <ClCompile Include="classes\ranged_enemy.cpp" />
     <ClCompile Include="classes\shelter_scene.cpp" />
     <ClCompile Include="components\enemy_behaviour_component.cpp" />
     <ClCompile Include="components\enemy_component.cpp" />
