Enemy distance detection

--- a/DOME.vcxproj.filters
+++ b/DOME.vcxproj.filters
@@ -125,6 +125,9 @@
     <ClCompile Include="classes\ranged_enemy.cpp">
       <Filter>Source Files\classes</Filter>
     </ClCompile>
+    <ClCompile Include="components\enemy_detection_component.cpp">
+      <Filter>Source Files\components</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="utils\Collisions.h">
@@ -294,6 +297,9 @@
     </ClInclude>
     <ClInclude Include="classes\ranged_enemy.h">
       <Filter>Header Files\classes</Filter>
+    </ClInclude>
+    <ClInclude Include="components\enemy_detection_component.h">
+      <Filter>Header Files\components</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
