--- a/DOME.vcxproj
+++ b/DOME.vcxproj
@@ -37,6 +37,7 @@
     <ClInclude Include="classes\shelter_scene.h" />
     <ClInclude Include="components\enemy_behaviour_component.h" />
     <ClInclude Include="components\enemy_component.h" />
+    <ClInclude Include="components\enemy_detection_component.h" />
     <ClInclude Include="components\game_entity_component.h" />
     <ClInclude Include="classes\weapon_behaviour.h" />
     <ClInclude Include="components\GravityComponent.h" />
@@ -95,6 +96,7 @@
     <ClCompile Include="classes\shelter_scene.cpp" />
     <ClCompile Include="components\enemy_behaviour_component.cpp" />
     <ClCompile Include="components\enemy_component.cpp" />
+    <ClCompile Include="components\enemy_detection_component.cpp" />
     <ClCompile Include="components\game_entity_component.cpp" />
     <ClCompile Include="classes\weapon_behaviour.cpp" />
     <ClCompile Include="components\GravityComponent.cpp" />
