--- a/DOME.vcxproj.filters
+++ b/DOME.vcxproj.filters
@@ -128,6 +128,15 @@
     <ClCompile Include="utils\ray_cast.cpp">
       <Filter>Source Files\utils</Filter>
     </ClCompile>
+    <ClCompile Include="components\enemy_detection_component.cpp">
+      <Filter>Source Files\components</Filter>
+    </ClCompile>
+    <ClCompile Include="components\interactableElement.cpp">
+      <Filter>Source Files\components</Filter>
+    </ClCompile>
+    <ClCompile Include="components\interactions.cpp">
+      <Filter>Source Files\components</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="utils\Collisions.h">
@@ -300,6 +309,15 @@
     </ClInclude>
     <ClInclude Include="utils\ray_cast.h">
       <Filter>Header Files\utils</Filter>
+    </ClInclude>
+    <ClInclude Include="components\enemy_detection_component.h">
+      <Filter>Header Files\components</Filter>
+    </ClInclude>
+    <ClInclude Include="components\interactableElement.h">
+      <Filter>Header Files\components</Filter>
+    </ClInclude>
+    <ClInclude Include="components\interactions.h">
+      <Filter>Header Files\components</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
