--- a/DOME.vcxproj
+++ b/DOME.vcxproj
@@ -30,6 +30,7 @@
     <ClInclude Include="classes\map.h" />
     <ClInclude Include="classes\menu_button.h" />
     <ClInclude Include="classes\menu_scene.h" />
+    <ClInclude Include="classes\particleSystem.h" />
     <ClInclude Include="classes\physiognomy.h" />
     <ClInclude Include="classes\player.h" />
     <ClInclude Include="classes\raid_scene.h" />
@@ -92,6 +93,7 @@
     <ClCompile Include="classes\map.cpp" />
     <ClCompile Include="classes\menu_button.cpp" />
     <ClCompile Include="classes\menu_scene.cpp" />
+    <ClCompile Include="classes\particleSystem.cpp" />
     <ClCompile Include="classes\physiognomy.cpp" />
     <ClCompile Include="classes\player.cpp" />
     <ClCompile Include="classes\raid_scene.cpp" />
