Details and reestructuration of weapon classes (ricochet + classic))

--- a/DOME.vcxproj.filters
+++ b/DOME.vcxproj.filters
@@ -140,6 +140,12 @@
     <ClCompile Include="classes\particleSystem.cpp">
       <Filter>Source Files\components</Filter>
     </ClCompile>
+    <ClCompile Include="classes\ricochet_weapon.cpp">
+      <Filter>Source Files\classes</Filter>
+    </ClCompile>
+    <ClCompile Include="components\ricochet.cpp">
+      <Filter>Source Files\components</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="utils\Collisions.h">
@@ -327,6 +333,9 @@
     </ClInclude>
     <ClInclude Include="components\ricochet.h">
       <Filter>Header Files\components</Filter>
+    </ClInclude>
+    <ClInclude Include="classes\ricochet_weapon.h">
+      <Filter>Header Files\classes</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
