Reestructured map rendering so it helps for future adjustment to the map (like collisions and properties)

--- a/DOME.vcxproj
+++ b/DOME.vcxproj
@@ -50,7 +50,7 @@
     <ClInclude Include="components\InventoryController.h" />
     <ClInclude Include="components\KeyboardPlayerCtrl.h" />
     <ClInclude Include="components\loot.h" />
-    <ClInclude Include="components\map_render.h" />
+    <ClInclude Include="components\tile_renderer.h" />
     <ClInclude Include="components\player_animation.h" />
     <ClInclude Include="components\ricochet.h" />
     <ClInclude Include="components\Transform.h" />
@@ -115,7 +115,7 @@
     <ClCompile Include="components\InventoryController.cpp" />
     <ClCompile Include="components\KeyboardPlayerCtrl.cpp" />
     <ClCompile Include="components\loot.cpp" />
-    <ClCompile Include="components\map_render.cpp" />
+    <ClCompile Include="components\tile_renderer.cpp" />
     <ClCompile Include="components\player_animation.cpp" />
     <ClCompile Include="components\ricochet.cpp" />
     <ClCompile Include="components\weapon.cpp" />
