Added collision component to the player, now it stops at the flor+or
Redefinded some methods on keyboardplayerctrl, and gravitycomponent

--- a/DOME.vcxproj
+++ b/DOME.vcxproj
@@ -50,6 +50,7 @@
     <ClInclude Include="components\InventoryController.h" />
     <ClInclude Include="components\KeyboardPlayerCtrl.h" />
     <ClInclude Include="components\loot.h" />
+    <ClInclude Include="components\player_collisions.h" />
     <ClInclude Include="components\tile_renderer.h" />
     <ClInclude Include="components\player_animation.h" />
     <ClInclude Include="components\ricochet.h" />
@@ -115,6 +116,7 @@
     <ClCompile Include="components\InventoryController.cpp" />
     <ClCompile Include="components\KeyboardPlayerCtrl.cpp" />
     <ClCompile Include="components\loot.cpp" />
+    <ClCompile Include="components\player_collisions.cpp" />
     <ClCompile Include="components\tile_renderer.cpp" />
     <ClCompile Include="components\player_animation.cpp" />
     <ClCompile Include="components\ricochet.cpp" />
