--- a/DOME.vcxproj.filters
+++ b/DOME.vcxproj.filters
@@ -145,6 +145,9 @@
     <ClCompile Include="classes\tile.cpp">
       <Filter>Source Files\classes</Filter>
     </ClCompile>
+    <ClCompile Include="components\player_collisions.cpp">
+      <Filter>Source Files\components</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="utils\Collisions.h">
@@ -333,6 +336,9 @@
       <Filter>Header Files\components</Filter>
     </ClInclude>
     <ClInclude Include="classes\tile.h">
+      <Filter>Header Files\classes</Filter>
+    </ClInclude>
+    <ClInclude Include="components\player_collisions.h">
       <Filter>Header Files\classes</Filter>
     </ClInclude>
   </ItemGroup>
