--- a/DOME.vcxproj.filters
+++ b/DOME.vcxproj.filters
@@ -137,8 +137,6 @@
     <ClCompile Include="components\loot.cpp">
       <Filter>Source Files\components</Filter>
     </ClCompile>
-    <ClCompile Include="classes\ricochet_weapon.cpp" />
-    <ClCompile Include="components\ricochet.cpp" />
     <ClCompile Include="components\tile_renderer.cpp">
       <Filter>Source Files\components</Filter>
     </ClCompile>
@@ -146,6 +144,21 @@
       <Filter>Source Files\classes</Filter>
     </ClCompile>
     <ClCompile Include="components\player_collisions.cpp">
+      <Filter>Source Files\components</Filter>
+    </ClCompile>
+    <ClCompile Include="components\ricochet.cpp">
+      <Filter>Source Files\components</Filter>
+    </ClCompile>
+    <ClCompile Include="classes\ricochet_weapon.cpp">
+      <Filter>Source Files\components</Filter>
+    </ClCompile>
+    <ClCompile Include="components\player_health_component.cpp">
+      <Filter>Source Files\components</Filter>
+    </ClCompile>
+    <ClCompile Include="components\hunger_component.cpp">
+      <Filter>Source Files\components</Filter>
+    </ClCompile>
+    <ClCompile Include="components\tiredness_component.cpp">
       <Filter>Source Files\components</Filter>
     </ClCompile>
   </ItemGroup>
@@ -330,8 +343,6 @@
     <ClInclude Include="components\ricochet.h">
       <Filter>Header Files\components</Filter>
     </ClInclude>
-    <ClInclude Include="components\loot.h" />
-    <ClInclude Include="classes\ricochet_weapon.h" />
     <ClInclude Include="components\tile_renderer.h">
       <Filter>Header Files\components</Filter>
     </ClInclude>
@@ -340,6 +351,21 @@
     </ClInclude>
     <ClInclude Include="components\player_collisions.h">
       <Filter>Header Files\classes</Filter>
+    </ClInclude>
+    <ClInclude Include="components\loot.h">
+      <Filter>Header Files\components</Filter>
+    </ClInclude>
+    <ClInclude Include="classes\ricochet_weapon.h">
+      <Filter>Header Files\components</Filter>
+    </ClInclude>
+    <ClInclude Include="components\player_health_component.h">
+      <Filter>Header Files\components</Filter>
+    </ClInclude>
+    <ClInclude Include="components\hunger_component.h">
+      <Filter>Header Files\components</Filter>
+    </ClInclude>
+    <ClInclude Include="components\tiredness_component.h">
+      <Filter>Header Files\components</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
