fixed filters problem

--- a/DOME.vcxproj.filters
+++ b/DOME.vcxproj.filters
@@ -158,6 +158,15 @@
     <ClCompile Include="components\charge.cpp">
       <Filter>Source Files\components</Filter>
     </ClCompile>
+    <ClCompile Include="components\hunger_component.cpp">
+      <Filter>Source Files\components</Filter>
+    </ClCompile>
+    <ClCompile Include="components\player_health_component.cpp">
+      <Filter>Source Files\components</Filter>
+    </ClCompile>
+    <ClCompile Include="components\tiredness_component.cpp">
+      <Filter>Source Files\components</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="utils\Collisions.h">
@@ -340,7 +349,6 @@
     <ClInclude Include="components\ricochet.h">
       <Filter>Header Files\components</Filter>
     </ClInclude>
-    <ClInclude Include="components\loot.h" />
     <ClInclude Include="components\tile_renderer.h">
       <Filter>Header Files\components</Filter>
     </ClInclude>
@@ -357,6 +365,18 @@
       <Filter>Header Files\classes</Filter>
     </ClInclude>
     <ClInclude Include="components\charge.h">
+      <Filter>Header Files\components</Filter>
+    </ClInclude>
+    <ClInclude Include="components\hunger_component.h">
+      <Filter>Header Files\components</Filter>
+    </ClInclude>
+    <ClInclude Include="components\loot.h">
+      <Filter>Header Files\components</Filter>
+    </ClInclude>
+    <ClInclude Include="components\player_health_component.h">
+      <Filter>Header Files\components</Filter>
+    </ClInclude>
+    <ClInclude Include="components\tiredness_component.h">
       <Filter>Header Files\components</Filter>
     </ClInclude>
   </ItemGroup>
