--- a/DOME.vcxproj.filters
+++ b/DOME.vcxproj.filters
@@ -167,6 +167,96 @@
     <ClCompile Include="components\tiredness_component.cpp">
       <Filter>Source Files\components</Filter>
     </ClCompile>
+    <ClCompile Include="libraries\sdlgui\sdlgui\window.cpp">
+      <Filter>Source Files\sdlgui</Filter>
+    </ClCompile>
+    <ClCompile Include="libraries\sdlgui\sdlgui\widget.cpp">
+      <Filter>Source Files\sdlgui</Filter>
+    </ClCompile>
+    <ClCompile Include="libraries\sdlgui\sdlgui\vscrollpanel.cpp">
+      <Filter>Source Files\sdlgui</Filter>
+    </ClCompile>
+    <ClCompile Include="libraries\sdlgui\sdlgui\theme.cpp">
+      <Filter>Source Files\sdlgui</Filter>
+    </ClCompile>
+    <ClCompile Include="libraries\sdlgui\sdlgui\textbox.cpp">
+      <Filter>Source Files\sdlgui</Filter>
+    </ClCompile>
+    <ClCompile Include="libraries\sdlgui\sdlgui\tabwidget.cpp">
+      <Filter>Source Files\sdlgui</Filter>
+    </ClCompile>
+    <ClCompile Include="libraries\sdlgui\sdlgui\switchbox.cpp">
+      <Filter>Source Files\sdlgui</Filter>
+    </ClCompile>
+    <ClCompile Include="libraries\sdlgui\sdlgui\tabheader.cpp">
+      <Filter>Source Files\sdlgui</Filter>
+    </ClCompile>
+    <ClCompile Include="libraries\sdlgui\sdlgui\stackedwidget.cpp">
+      <Filter>Source Files\sdlgui</Filter>
+    </ClCompile>
+    <ClCompile Include="libraries\sdlgui\sdlgui\slider.cpp">
+      <Filter>Source Files\sdlgui</Filter>
+    </ClCompile>
+    <ClCompile Include="libraries\sdlgui\sdlgui\screen.cpp">
+      <Filter>Source Files\sdlgui</Filter>
+    </ClCompile>
+    <ClCompile Include="libraries\sdlgui\sdlgui\resources.cpp">
+      <Filter>Source Files\sdlgui</Filter>
+    </ClCompile>
+    <ClCompile Include="libraries\sdlgui\sdlgui\progressbar.cpp">
+      <Filter>Source Files\sdlgui</Filter>
+    </ClCompile>
+    <ClCompile Include="libraries\sdlgui\sdlgui\popupbutton.cpp">
+      <Filter>Source Files\sdlgui</Filter>
+    </ClCompile>
+    <ClCompile Include="libraries\sdlgui\sdlgui\popup.cpp">
+      <Filter>Source Files\sdlgui</Filter>
+    </ClCompile>
+    <ClCompile Include="libraries\sdlgui\sdlgui\nanovg.c">
+      <Filter>Source Files\sdlgui</Filter>
+    </ClCompile>
+    <ClCompile Include="libraries\sdlgui\sdlgui\messagedialog.cpp">
+      <Filter>Source Files\sdlgui</Filter>
+    </ClCompile>
+    <ClCompile Include="libraries\sdlgui\sdlgui\layout.cpp">
+      <Filter>Source Files\sdlgui</Filter>
+    </ClCompile>
+    <ClCompile Include="libraries\sdlgui\sdlgui\loadimages.cpp">
+      <Filter>Source Files\sdlgui</Filter>
+    </ClCompile>
+    <ClCompile Include="libraries\sdlgui\sdlgui\label.cpp">
+      <Filter>Source Files\sdlgui</Filter>
+    </ClCompile>
+    <ClCompile Include="libraries\sdlgui\sdlgui\imageview.cpp">
+      <Filter>Source Files\sdlgui</Filter>
+    </ClCompile>
+    <ClCompile Include="libraries\sdlgui\sdlgui\graph.cpp">
+      <Filter>Source Files\sdlgui</Filter>
+    </ClCompile>
+    <ClCompile Include="libraries\sdlgui\sdlgui\imagepanel.cpp">
+      <Filter>Source Files\sdlgui</Filter>
+    </ClCompile>
+    <ClCompile Include="libraries\sdlgui\sdlgui\dropdownbox.cpp">
+      <Filter>Source Files\sdlgui</Filter>
+    </ClCompile>
+    <ClCompile Include="libraries\sdlgui\sdlgui\combobox.cpp">
+      <Filter>Source Files\sdlgui</Filter>
+    </ClCompile>
+    <ClCompile Include="libraries\sdlgui\sdlgui\common.cpp">
+      <Filter>Source Files\sdlgui</Filter>
+    </ClCompile>
+    <ClCompile Include="libraries\sdlgui\sdlgui\colorwheel.cpp">
+      <Filter>Source Files\sdlgui</Filter>
+    </ClCompile>
+    <ClCompile Include="libraries\sdlgui\sdlgui\colorpicker.cpp">
+      <Filter>Source Files\sdlgui</Filter>
+    </ClCompile>
+    <ClCompile Include="libraries\sdlgui\sdlgui\button.cpp">
+      <Filter>Source Files\sdlgui</Filter>
+    </ClCompile>
+    <ClCompile Include="libraries\sdlgui\sdlgui\checkbox.cpp">
+      <Filter>Source Files\sdlgui</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="utils\Collisions.h">
@@ -378,6 +468,120 @@
     </ClInclude>
     <ClInclude Include="components\tiredness_component.h">
       <Filter>Header Files\components</Filter>
+    </ClInclude>
+    <ClInclude Include="libraries\sdlgui\sdlgui\window.h">
+      <Filter>Header Files\sdlgui</Filter>
+    </ClInclude>
+    <ClInclude Include="libraries\sdlgui\sdlgui\widget.h">
+      <Filter>Header Files\sdlgui</Filter>
+    </ClInclude>
+    <ClInclude Include="libraries\sdlgui\sdlgui\vscrollpanel.h">
+      <Filter>Header Files\sdlgui</Filter>
+    </ClInclude>
+    <ClInclude Include="libraries\sdlgui\sdlgui\theme.h">
+      <Filter>Header Files\sdlgui</Filter>
+    </ClInclude>
+    <ClInclude Include="libraries\sdlgui\sdlgui\toolbutton.h">
+      <Filter>Header Files\sdlgui</Filter>
+    </ClInclude>
+    <ClInclude Include="libraries\sdlgui\sdlgui\tabwidget.h">
+      <Filter>Header Files\sdlgui</Filter>
+    </ClInclude>
+    <ClInclude Include="libraries\sdlgui\sdlgui\textbox.h">
+      <Filter>Header Files\sdlgui</Filter>
+    </ClInclude>
+    <ClInclude Include="libraries\sdlgui\sdlgui\tabheader.h">
+      <Filter>Header Files\sdlgui</Filter>
+    </ClInclude>
+    <ClInclude Include="libraries\sdlgui\sdlgui\switchbox.h">
+      <Filter>Header Files\sdlgui</Filter>
+    </ClInclude>
+    <ClInclude Include="libraries\sdlgui\sdlgui\stb_truetype.h">
+      <Filter>Header Files\sdlgui</Filter>
+    </ClInclude>
+    <ClInclude Include="libraries\sdlgui\sdlgui\stb_image.h">
+      <Filter>Header Files\sdlgui</Filter>
+    </ClInclude>
+    <ClInclude Include="libraries\sdlgui\sdlgui\stackedwidget.h">
+      <Filter>Header Files\sdlgui</Filter>
+    </ClInclude>
+    <ClInclude Include="libraries\sdlgui\sdlgui\slider.h">
+      <Filter>Header Files\sdlgui</Filter>
+    </ClInclude>
+    <ClInclude Include="libraries\sdlgui\sdlgui\screen.h">
+      <Filter>Header Files\sdlgui</Filter>
+    </ClInclude>
+    <ClInclude Include="libraries\sdlgui\sdlgui\sdlguii.h">
+      <Filter>Header Files\sdlgui</Filter>
+    </ClInclude>
+    <ClInclude Include="libraries\sdlgui\sdlgui\resources.h">
+      <Filter>Header Files\sdlgui</Filter>
+    </ClInclude>
+    <ClInclude Include="libraries\sdlgui\sdlgui\progressbar.h">
+      <Filter>Header Files\sdlgui</Filter>
+    </ClInclude>
+    <ClInclude Include="libraries\sdlgui\sdlgui\popupbutton.h">
+      <Filter>Header Files\sdlgui</Filter>
+    </ClInclude>
+    <ClInclude Include="libraries\sdlgui\sdlgui\nanovg_rt.h">
+      <Filter>Header Files\sdlgui</Filter>
+    </ClInclude>
+    <ClInclude Include="libraries\sdlgui\sdlgui\popup.h">
+      <Filter>Header Files\sdlgui</Filter>
+    </ClInclude>
+    <ClInclude Include="libraries\sdlgui\sdlgui\nanovg.h">
+      <Filter>Header Files\sdlgui</Filter>
+    </ClInclude>
+    <ClInclude Include="libraries\sdlgui\sdlgui\nanort.h">
+      <Filter>Header Files\sdlgui</Filter>
+    </ClInclude>
+    <ClInclude Include="libraries\sdlgui\sdlgui\messagedialog.h">
+      <Filter>Header Files\sdlgui</Filter>
+    </ClInclude>
+    <ClInclude Include="libraries\sdlgui\sdlgui\layout.h">
+      <Filter>Header Files\sdlgui</Filter>
+    </ClInclude>
+    <ClInclude Include="libraries\sdlgui\sdlgui\label.h">
+      <Filter>Header Files\sdlgui</Filter>
+    </ClInclude>
+    <ClInclude Include="libraries\sdlgui\sdlgui\imagepanel.h">
+      <Filter>Header Files\sdlgui</Filter>
+    </ClInclude>
+    <ClInclude Include="libraries\sdlgui\sdlgui\imageview.h">
+      <Filter>Header Files\sdlgui</Filter>
+    </ClInclude>
+    <ClInclude Include="libraries\sdlgui\sdlgui\graph.h">
+      <Filter>Header Files\sdlgui</Filter>
+    </ClInclude>
+    <ClInclude Include="libraries\sdlgui\sdlgui\fontstash.h">
+      <Filter>Header Files\sdlgui</Filter>
+    </ClInclude>
+    <ClInclude Include="libraries\sdlgui\sdlgui\formhelper.h">
+      <Filter>Header Files\sdlgui</Filter>
+    </ClInclude>
+    <ClInclude Include="libraries\sdlgui\sdlgui\dropdownbox.h">
+      <Filter>Header Files\sdlgui</Filter>
+    </ClInclude>
+    <ClInclude Include="libraries\sdlgui\sdlgui\entypo.h">
+      <Filter>Header Files\sdlgui</Filter>
+    </ClInclude>
+    <ClInclude Include="libraries\sdlgui\sdlgui\common.h">
+      <Filter>Header Files\sdlgui</Filter>
+    </ClInclude>
+    <ClInclude Include="libraries\sdlgui\sdlgui\combobox.h">
+      <Filter>Header Files\sdlgui</Filter>
+    </ClInclude>
+    <ClInclude Include="libraries\sdlgui\sdlgui\colorwheel.h">
+      <Filter>Header Files\sdlgui</Filter>
+    </ClInclude>
+    <ClInclude Include="libraries\sdlgui\sdlgui\checkbox.h">
+      <Filter>Header Files\sdlgui</Filter>
+    </ClInclude>
+    <ClInclude Include="libraries\sdlgui\sdlgui\colorpicker.h">
+      <Filter>Header Files\sdlgui</Filter>
+    </ClInclude>
+    <ClInclude Include="libraries\sdlgui\sdlgui\button.h">
+      <Filter>Header Files\sdlgui</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
