--- a/DOME.vcxproj
+++ b/DOME.vcxproj
@@ -38,6 +38,7 @@
     <ClInclude Include="classes\ranged_enemy.h" />
     <ClInclude Include="classes\ricochet_weapon.h" />
     <ClInclude Include="classes\shelter_scene.h" />
+    <ClInclude Include="components\animation_component.h" />
     <ClInclude Include="components\charge.h" />
     <ClInclude Include="components\enemy_behaviour_component.h" />
     <ClInclude Include="components\enemy_component.h" />
