--- a/DOME.vcxproj
+++ b/DOME.vcxproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <ClInclude Include="classes\camera.h" />
     <ClInclude Include="classes\charge_weapon.h" />
+    <ClInclude Include="classes\crafting_system.h" />
     <ClInclude Include="classes\enemy.h" />
     <ClInclude Include="classes\game_character.h" />
     <ClInclude Include="classes\game_entity.h" />
@@ -132,6 +133,7 @@
   <ItemGroup>
     <ClCompile Include="classes\camera.cpp" />
     <ClCompile Include="classes\charge_weapon.cpp" />
+    <ClCompile Include="classes\crafting_system.cpp" />
     <ClCompile Include="classes\enemy.cpp" />
     <ClCompile Include="classes\game_character.cpp" />
     <ClCompile Include="classes\game_entity.cpp" />
