--- a/DOME.vcxproj
+++ b/DOME.vcxproj
@@ -41,6 +41,7 @@
     <ClInclude Include="classes\shelter_scene.h" />
     <ClInclude Include="components\animation_component.h" />
     <ClInclude Include="components\charge.h" />
+    <ClInclude Include="components\collider.h" />
     <ClInclude Include="components\enemy_behaviour_component.h" />
     <ClInclude Include="components\enemy_component.h" />
     <ClInclude Include="components\enemy_detection_component.h" />
