--- a/DOME.vcxproj
+++ b/DOME.vcxproj
@@ -40,6 +40,7 @@
     <ClInclude Include="classes\ricochet_weapon.h" />
     <ClInclude Include="classes\shelter_scene.h" />
     <ClInclude Include="components\animation_component.h" />
+    <ClInclude Include="components\bledout_component.h" />
     <ClInclude Include="components\charge.h" />
     <ClInclude Include="components\box_collider.h" />
     <ClInclude Include="components\enemy_behaviour_component.h" />
@@ -55,6 +56,7 @@
     <ClInclude Include="components\InventoryController.h" />
     <ClInclude Include="components\KeyboardPlayerCtrl.h" />
     <ClInclude Include="components\loot.h" />
+    <ClInclude Include="components\pain_component.h" />
     <ClInclude Include="components\player_collisions.h" />
     <ClInclude Include="components\player_health_component.h" />
     <ClInclude Include="components\tile_renderer.h" />
@@ -152,6 +154,7 @@
     <ClCompile Include="classes\ricochet_weapon.cpp" />
     <ClCompile Include="classes\shelter_scene.cpp" />
     <ClCompile Include="components\animation_component.cpp" />
+    <ClCompile Include="components\bledout_component.cpp" />
     <ClCompile Include="components\box_collider.cpp" />
     <ClCompile Include="components\charge.cpp" />
     <ClCompile Include="components\enemy_behaviour_component.cpp" />
@@ -166,6 +169,7 @@
     <ClCompile Include="components\InventoryController.cpp" />
     <ClCompile Include="components\KeyboardPlayerCtrl.cpp" />
     <ClCompile Include="components\loot.cpp" />
+    <ClCompile Include="components\pain_component.cpp" />
     <ClCompile Include="components\player_collisions.cpp" />
     <ClCompile Include="components\player_health_component.cpp" />
     <ClCompile Include="components\tile_renderer.cpp" />
