--- a/DOME.vcxproj
+++ b/DOME.vcxproj
@@ -58,6 +58,7 @@
     <ClInclude Include="components\loot.h" />
     <ClInclude Include="components\pain_component.h" />
     <ClInclude Include="components\player_collisions.h" />
+    <ClInclude Include="components\enemy_contact_damege.h" />
     <ClInclude Include="components\player_health_component.h" />
     <ClInclude Include="components\tile_renderer.h" />
     <ClInclude Include="components\player_animation.h" />
@@ -171,6 +172,7 @@
     <ClCompile Include="components\loot.cpp" />
     <ClCompile Include="components\pain_component.cpp" />
     <ClCompile Include="components\player_collisions.cpp" />
+    <ClCompile Include="components\enemy_contact_damege.cpp" />
     <ClCompile Include="components\player_health_component.cpp" />
     <ClCompile Include="components\tile_renderer.cpp" />
     <ClCompile Include="components\player_animation.cpp" />
