--- a/DOME.vcxproj.filters
+++ b/DOME.vcxproj.filters
@@ -272,6 +272,12 @@
     <ClCompile Include="components\pain_component.cpp">
       <Filter>Source Files\components</Filter>
     </ClCompile>
+    <ClCompile Include="components\contusion_component.cpp">
+      <Filter>Source Files\components</Filter>
+    </ClCompile>
+    <ClCompile Include="components\intoxication_component.cpp">
+      <Filter>Source Files\components</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="utils\Collisions.h">
@@ -608,6 +614,12 @@
       <Filter>Header Files\components</Filter>
     </ClInclude>
     <ClInclude Include="components\pain_component.h">
+      <Filter>Header Files\components</Filter>
+    </ClInclude>
+    <ClInclude Include="components\contusion_component.h">
+      <Filter>Header Files\components</Filter>
+    </ClInclude>
+    <ClInclude Include="components\intoxication_component.h">
       <Filter>Header Files\components</Filter>
     </ClInclude>
   </ItemGroup>
