--- a/DOME.vcxproj
+++ b/DOME.vcxproj
@@ -39,6 +39,7 @@
     <ClInclude Include="classes\ranged_enemy.h" />
     <ClInclude Include="classes\ricochet_weapon.h" />
     <ClInclude Include="classes\shelter_scene.h" />
+    <ClInclude Include="classes\workshop.h" />
     <ClInclude Include="components\animation_component.h" />
     <ClInclude Include="components\bledout_component.h" />
     <ClInclude Include="components\charge.h" />
@@ -156,6 +157,7 @@
     <ClCompile Include="classes\ranged_enemy.cpp" />
     <ClCompile Include="classes\ricochet_weapon.cpp" />
     <ClCompile Include="classes\shelter_scene.cpp" />
+    <ClCompile Include="classes\workshop.cpp" />
     <ClCompile Include="components\animation_component.cpp" />
     <ClCompile Include="components\bledout_component.cpp" />
     <ClCompile Include="components\box_collider.cpp" />
